# PrintWithColor

./: PrintWithColor.settings  ReadMe.ipynb  ReadMe.md  ReadMe_VI.md  ipynb2md.py  pyproject.toml  setup.py
PrintWithColor/: PrintWithColor.py  PrintWithColorCore.py
PrintWithColor.egg-info/: PKG-INFO  SOURCES.txt
src/pwc/: PrintWithColor.py  PrintWithColorCore.py  ReadMe.ipynb  ReadMe.md  ReadMe_VI.md  test.py
temp/: ReadMe.md
temp/temp/: readme.md
test/: test.py  test02.py  test03.py  test04.py
