[project]
name = "PrintWithColor"
version = "0.0.1"
authors = [
  { name="SweetSea-ButNotSweet" },
]
description = "A tiny Python wrapper that enhances the print() syntax by enabling text coloring on the screen."
readme = "ReadMe.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The Unlicense",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SweetSea-ButNotSweet/PrintWithColor"
"Bug Tracker" = "https://github.com/SweetSea-ButNotSweet/PrintWithColor/issues"